--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#157878">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <link rel="stylesheet" href="/assets/css/style.css">
+        <link rel="stylesheet" href="/ece4160-website/assets/css/style.css">
         <!-- You can set your favicon here -->
         <!-- link rel="shortcut icon" type="image/x-icon" href="/ece4160-website/favicon.ico" -->
     </head>
@@ -42,7 +42,7 @@
         <header class="page-header" role="banner">
             <h1 class="project-name"><a href="/ece4160-website/">Sugam Gautam</a></h1>
             <h2 class="project-tagline">ECE 4160 - Fast Robots</h2>
-            <a href="https://github.com/sg758/ece4160-webite" class="btn">View on GitHub</a>
+            <a href="https://github.com/sg758/ece4160-website" class="btn">View on GitHub</a>
         </header>
 
         <main id="content" class="main-content" role="main">
