--- a/labs/lab1.html
+++ b/labs/lab1.html
@@ -32,7 +32,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/ece4160-website/assets/css/style.css">
     <!-- You can set your favicon here -->
     <!-- link rel="shortcut icon" type="image/x-icon" href="/ece4160-website/favicon.ico" -->
 </head>
