--- a/labs/lab1.html
+++ b/labs/lab1.html
@@ -43,13 +43,13 @@
     <header class="page-header" role="banner">
         <h1 class="project-name"><a href="/ece4160-website/">Sugam Gautam</a></h1>
         <h2 class="project-tagline">ECE 4160 - Fast Robots</h2>
-        <a href="https://github.com/sg758/ece4160-webite" class="btn">View on GitHub</a>
+        <a href="https://github.com/sg758/ece4160-website" class="btn">View on GitHub</a>
     </header>
 
     <main id="content" class="main-content" role="main">
         <div id="navigation">
-            <a href="/ece4160-website/" class="btn" id="current">Home</a>
-            <a href="/ece4160-website/labs/lab1.html" class="btn">Lab 1</a>
+            <a href="/ece4160-website/" class="btn">Home</a>
+            <a href="/ece4160-website/labs/lab1.html" class="btn" id="current">Lab 1</a>
             <!-- <a href="/ece4160-website/labs/lab2.html" class="btn">Lab 2</a>
             <a href="/ece4160-website/labs/lab3.html" class="btn">Lab 3</a>
             <a href="/ece4160-website/labs/lab4.html" class="btn">Lab 4</a> -->
