fixed button animation/margin on "View on GitHub"

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <header class="page-header" role="banner">
             <h1 class="project-name"><a href="/ece4160-website/">Sugam Gautam</a></h1>
             <h2 class="project-tagline">ECE 4160 - Fast Robots</h2>
-            <a href="https://github.com/sg758/ece4160-website" class="btn">View on GitHub</a>
+            <a href="https://github.com/sg758/ece4160-website" class="btn" id="view-on-github">View on GitHub</a>
         </header>
 
         <main id="content" class="main-content" role="main">
