--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <a id="skip-to-content" href="#content">Skip to the content.</a>
 
         <header class="page-header" role="banner">
-            <h1 class="project-name"><a href="/ece4160-website/">Sugam Gautam</a></h1>
-            <h2 class="project-tagline">ECE 4160 - Fast Robots</h2>
+            <h1 class="project-name"><a href="/ece4160-website/">ECE 4160 - Fast Robots</a></h1>
+            <h2 class="project-tagline">Sugam Gautam</h2>
             <a href="https://github.com/sg758/ece4160-website" class="btn" id="view-on-github">View on GitHub</a>
         </header>
 
