--- a/labs/lab1.html
+++ b/labs/lab1.html
@@ -41,8 +41,8 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-        <h1 class="project-name"><a href="/ece4160-website/">Sugam Gautam</a></h1>
-        <h2 class="project-tagline">ECE 4160 - Fast Robots</h2>
+        <h1 class="project-name"><a href="/ece4160-website/">ECE 4160 - Fast Robots</a></h1>
+        <h2 class="project-tagline">Sugam Gautam</h2>
         <a href="https://github.com/sg758/ece4160-website" class="btn"  id="view-on-github">View on GitHub</a>
     </header>
 
@@ -75,16 +75,19 @@
 
         <footer class="site-footer">
             <span class="site-footer-owner">
-                <a href="https://sg758.github.io/ece4160-website/">sg758.github.io</a>
-                is maintained by <a href="https://github.com/sg758">sg758</a>.
+                This site is maintained by
+                <a href="https://github.com/sg758">Sugam Gautam</a>.
             </span>
             <span class="site-footer-credits">
-                This page was created using boilerplate HTML and CSS from
-                <a href="https://pages.github.com">GitHub Pages</a>.
-            </span>
-            <span class="site-footer-credits">
-                The <a href="https://draculatheme.com/">Dracula</a>
-                color palette was used for the theme.
+                Hosted on
+                <a href="https://pages.github.com">GitHub Pages</a>
+                | Adapted from
+                <a href="https://jasonlong.github.io/cayman-theme/">Cayman</a>
+                theme by
+                <a href="https://twitter.com/jasonlong">Jason Long</a>
+                using the
+                <a href="https://draculatheme.com/">Dracula</a>
+                color palette.
             </span>
         </footer>
     </main>
