fixed footer, again

--- a/index.html
+++ b/index.html
@@ -60,16 +60,19 @@
 
             <footer class="site-footer">
                 <span class="site-footer-owner">
-                    <a href="https://sg758.github.io/ece4160-website/">sg758.github.io</a>
-                    is maintained by <a href="https://github.com/sg758">sg758</a>.
+                    This site is maintained by
+                    <a href="https://github.com/sg758">Sugam Gautam</a>.
                 </span>
                 <span class="site-footer-credits">
-                    This page was created using boilerplate HTML and CSS from
-                    <a href="https://pages.github.com">GitHub Pages</a>.
-                </span>
-                <span class="site-footer-credits">
-                    The <a href="https://draculatheme.com/">Dracula</a>
-                    color palette was used for the theme.
+                    Hosted on
+                    <a href="https://pages.github.com">GitHub Pages</a>
+                    — Adapted from
+                    <a href="https://jasonlong.github.io/cayman-theme/">Cayman</a>
+                    theme by
+                    <a href="https://twitter.com/jasonlong">Jason Long</a>
+                    using the
+                    <a href="https://draculatheme.com/">Dracula</a>
+                    color palette.
                 </span>
             </footer>
         </main>
