--- a/labs/lab1.html
+++ b/labs/lab1.html
@@ -81,7 +81,7 @@
             <span class="site-footer-credits">
                 Hosted on
                 <a href="https://pages.github.com">GitHub Pages</a>
-                | Adapted from
+                — Adapted from
                 <a href="https://jasonlong.github.io/cayman-theme/">Cayman</a>
                 theme by
                 <a href="https://twitter.com/jasonlong">Jason Long</a>
