--- a/labs/lab1.html
+++ b/labs/lab1.html
@@ -71,27 +71,29 @@
             </p>
 
         <h2>Demos</h2>
-            <h3>Program 1: <code>Blink.ino</code></h3>
+            <h3>Program 1: <samp>Blink.ino</samp></h3>
                 <figure id="figure1">
-                    <video width="100%" controls>
+                    <video width="100%" controls loop muted>
                         <source src="/ece4160-website/assets/videos/lab1/blink.mp4" type="video/mp4">
                     </video>
                 </figure>
 
-            <h3>Program 2: <code>Example4_Serial.ino</code></h3>
+            <h3>Program 2: <samp>Example4_Serial.ino</samp></h3>
                 <p>
                     In this example, the board takes data from the
-                    <code>Message</code> field in the serial monitor as input
+                    <samp>Message</samp> field in the serial monitor as input
                     and echoes it back as the output. Below is a screenshot of 
                     the serial monitor after I entered the following inputs:
-                    "test", "1", "2", "2+3", "clear", "exit()", and "okay!".
+                    <samp>test</samp>, <samp>1</samp>, <samp>2</samp>,
+                    <samp>2+3</samp>, <samp>clear</samp>, <samp>exit()</samp>,
+                    and <samp>okay!</samp>.
                 </p>
                 <figure id="figure2">
                     <img src="/ece4160-website/assets/images/lab1/serial.jpg"
                     alt="Image of serial monitor after Example4_Serial.ino demo">
                 </figure>
             
-            <h3>Program 3: <code>Example2_AnalogRead.ino</code></h3>
+            <h3>Program 3: <samp>Example2_AnalogRead.ino</samp></h3>
                 <p>
                     The original code printed raw temperature data along with
                     some voltage data, but I modified it slightly to print the
@@ -99,19 +101,19 @@
                     but not used) to make it more comprehensible.
                 </p>
                 <figure id="figure3">
-                    <video width="100%" controls>
+                    <video width="100%" controls muted>
                         <source src="/ece4160-website/assets/videos/lab1/temp.mp4" type="video/mp4">
                     </video>
                 </figure>
             
-            <h3>Program 4: <code>Example1_MicrophoneOutput.ino</code></h3>
+            <h3>Program 4: <samp>Example1_MicrophoneOutput.ino</samp></h3>
                 <p>
-                    For this program, I played a 440Hz sine wave and took a 
-                    screen recording of the Serial Monitor as the sound was
-                    listened to by the board's microphone.
+                    For this program, I played a 440Hz sine wave and took a
+                    screen recording of the Serial Monitor as the computer sound
+                    was listened to by the microphone.
                 </p>
                 <figure id="figure4">
-                    <video width="100%" controls>
+                    <video width="100%" controls loop>
                         <source src="/ece4160-website/assets/videos/lab1/mic.mp4" type="video/mp4">
                     </video>
                 </figure>
