justified the <p> tags

--- a/labs/lab1.html
+++ b/labs/lab1.html
@@ -98,7 +98,9 @@
                     The original code printed raw temperature data along with
                     some voltage data, but I modified it slightly to print the
                     temperature in °F (which was stored in a variable already
-                    but not used) to make it more comprehensible.
+                    but not used) to make it more comprehensible. As can be
+                    seen in the video, by holding my thumb over the processor,
+                    the temperature increased by a few degrees.
                 </p>
                 <figure id="figure3">
                     <video width="100%" controls muted>
