added profile picture & introduction on home page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a id="skip-to-content" href="#content">Skip to the content.</a>
 
         <header class="page-header" role="banner">
-            <h1 class="project-name"><a href="/ece4160-website/">ECE 4160 - Fast Robots</a></h1>
+            <h1 class="project-name"><a href="/ece4160-website/">ECE 4160 - Fast Robots (SP23)</a></h1>
             <h2 class="project-tagline">Sugam Gautam</h2>
             <a href="https://github.com/sg758/ece4160-website" class="btn" id="view-on-github">View on GitHub</a>
         </header>
@@ -54,9 +54,18 @@
                 <a href="/ece4160-website/labs/lab4.html" class="btn">Lab 4</a> -->
             </div>
 
-            <h1>Welcome to Sugam Gautam's ECE 4160 Website!</h1>
+            <img src="/ece4160-website/assets/images/home/profile.JPEG"
+                 alt="Profile Picture"
+                 style="border-radius:25%; width:30%">
+            
+            <p>
+                Hello, my name is Sugam Gautam. I am a fourth-year student at
+                Cornell University, majoring in Electrical and Computer
+                Engineering and minoring in Computer Science. On this website,
+                I will be documenting my progress through the variety of labs in
+                ECE 4160.
+            </p>
 
-            <!-- <p>INTRODUCTION</p> -->
 
             <footer class="site-footer">
                 <span class="site-footer-owner">
