--- a/labs/lab1.html
+++ b/labs/lab1.html
@@ -41,7 +41,7 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-        <h1 class="project-name"><a href="/ece4160-website/">ECE 4160 - Fast Robots</a></h1>
+        <h1 class="project-name"><a href="/ece4160-website/">ECE 4160 - Fast Robots (SP23)</a></h1>
         <h2 class="project-tagline">Sugam Gautam</h2>
         <a href="https://github.com/sg758/ece4160-website" class="btn"  id="view-on-github">View on GitHub</a>
     </header>
