--- a/index.html
+++ b/index.html
@@ -54,9 +54,13 @@
                 <a href="/ece4160-website/labs/lab4.html" class="btn">Lab 4</a> -->
             </div>
 
-            <img src="/ece4160-website/assets/images/home/profile.JPEG"
-                 alt="Profile Picture"
-                 style="border-radius:25%; width:30%">
+            <p>
+                <center>
+                    <img src="/ece4160-website/assets/images/home/profile.JPEG"
+                         alt="Profile Picture"
+                         style="border-radius:30%; width:35%">
+                </center>
+            </p>
             
             <p>
                 Hello, my name is Sugam Gautam. I am a fourth-year student at
