--- a/labs/lab2.html
+++ b/labs/lab2.html
@@ -50,8 +50,8 @@
             <a href="/ece4160-website/" class="btn">Home</a>
             <a href="/ece4160-website/labs/lab1.html" class="btn">Lab 1</a>
             <a href="/ece4160-website/labs/lab2.html" class="btn" id="current">Lab 2</a>
-            <!-- <a href="/ece4160-website/labs/lab3.html" class="btn">Lab 3</a>
-            <a href="/ece4160-website/labs/lab4.html" class="btn">Lab 4</a> -->
+            <a href="/ece4160-website/labs/lab3.html" class="btn">Lab 3</a>
+            <!-- <a href="/ece4160-website/labs/lab4.html" class="btn">Lab 4</a> -->
         </div>
 
         <h1>Introduction</h1>
