--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="/ece4160-website/labs/lab1.html" class="btn">Lab 1</a>
                 <a href="/ece4160-website/labs/lab2.html" class="btn">Lab 2</a>
                 <a href="/ece4160-website/labs/lab3.html" class="btn">Lab 3</a>
-                <!-- <a href="/ece4160-website/labs/lab4.html" class="btn">Lab 4</a> -->
+                <a href="/ece4160-website/labs/lab4.html" class="btn">Lab 4</a>
             </div>
 
             <p>
