fixed image url from jpg to png

--- a/labs/lab4.html
+++ b/labs/lab4.html
@@ -86,7 +86,7 @@
                     on a flat surface:
                 </p>
                 <figure id="figure2">
-                    <img src="/ece4160-website/assets/images/lab4/flat.jpg"
+                    <img src="/ece4160-website/assets/images/lab4/flat.png"
                     alt="Picture of QWIIC cable soldered to the ToF sensor">
                 </figure>
                 
