used a script to stage, commit, and push all modified files

--- a/labs/lab4.html
+++ b/labs/lab4.html
@@ -54,6 +54,10 @@
             <a href="/ece4160-website/labs/lab2.html" class="btn">Lab 2</a>
             <a href="/ece4160-website/labs/lab3.html" class="btn">Lab 3</a>
             <a href="/ece4160-website/labs/lab4.html" class="btn" id="current">Lab 4</a>
+            <a href="/ece4160-website/labs/lab5.html" class="btn">Lab 5</a>
+            <a href="/ece4160-website/labs/lab6.html" class="btn">Lab 6</a>
+            <a href="/ece4160-website/labs/lab7.html" class="btn">Lab 7</a>
+            <a href="/ece4160-website/labs/lab8.html" class="btn">Lab 8</a>
         </div>
 
         <h1>Introduction</h1>
@@ -187,7 +191,7 @@
                 </figure>
 
                 <p>
-                    
+                    Evidently, the gyroscope by itself is not accurate after __ deg.
                 </p>
                 <figure id="figure8">
                     <!-- <img src="/ece4160-website/assets/images/lab3/rangingtime.png"
