--- a/labs/lab1.html
+++ b/labs/lab1.html
@@ -52,6 +52,10 @@
             <a href="/ece4160-website/labs/lab2.html" class="btn">Lab 2</a>
             <a href="/ece4160-website/labs/lab3.html" class="btn">Lab 3</a>
             <a href="/ece4160-website/labs/lab4.html" class="btn">Lab 4</a>
+            <a href="/ece4160-website/labs/lab5.html" class="btn">Lab 5</a>
+            <a href="/ece4160-website/labs/lab6.html" class="btn">Lab 6</a>
+            <a href="/ece4160-website/labs/lab7.html" class="btn">Lab 7</a>
+            <a href="/ece4160-website/labs/lab8.html" class="btn">Lab 8</a>
         </div>
 
         <h1>Introduction</h1>
