--- a/labs/lab4.html
+++ b/labs/lab4.html
@@ -264,8 +264,10 @@
                 </p>
 
                 <figure id="figure11">
-                    <img src="/ece4160-website/assets/images/lab4/all.jpg"
-                    alt="ToF and IMU data vs. time as transmitted over bluetooth">
+                    <img src="/ece4160-website/assets/images/lab4/bothGyro.jpg"
+                    alt="IMU data vs. time as transmitted over bluetooth">
+                    <img src="/ece4160-website/assets/images/lab4/bothToF.jpg"
+                    alt="ToF data vs. time as transmitted over bluetooth">
                 </figure>
             
             <h2>Cut the Cord!</h2>
@@ -292,28 +294,25 @@
                     it can send the IMU data over BLE to the Jupyter Notebook for
                     analysis. However, before that, I first played around with the RC car
                     to discover all of the cool tricks that it can perform. The video in
-                    Figure 13 shows the car going all over the place using the cyclone
-                    mode.
+                    Figure 13 shows the car turning continuously.
                 </p>
                 <figure id="figure13">
                     <video width="100%" controls loop>
-                        <source src="/ece4160-website/assets/videos/lab4/cyclone.mp4"
+                        <source src="/ece4160-website/assets/videos/lab4/spinning.mp4"
                         type="video/mp4">
                     </video>
                 </figure>
 
                 <p>
-                    After strapping the Artemis to the RC Car, Figure 14 shows a video of
-                    the robot being driven by me, as well as a plot of the ToF and IMU
-                    sensor data over 5 seconds, as was sent over Bluetooth.
+                    After strapping the Artemis to the RC Car, Figure 14 shows a plot of
+                    the ToF and IMU sensor data over 5 seconds, as was sent over
+                    Bluetooth, while the RC car performed the same stunt.
                 </p>
                 <figure id="figure14">
-                    <video width="100%" controls loop>
-                        <source src="/ece4160-website/assets/videos/lab4/finalStunt.mp4"
-                        type="video/mp4">
-                    </video>
-                    <img src="/ece4160-website/assets/images/lab4/stunt.jpg"
-                    alt="Plot of ToF and IMU while performing stunt">
+                    <img src="/ece4160-website/assets/images/lab4/spinningGyro.jpg"
+                    alt="Plot of IMU while performing stunt">
+                    <img src="/ece4160-website/assets/images/lab4/spinningToF.jpg"
+                    alt="Plot of ToF while performing stunt">
                 </figure>
 
         <footer class="site-footer">
