--- a/labs/lab5.html
+++ b/labs/lab5.html
@@ -63,7 +63,7 @@
                 The purpose of Lab 5 was to control the RC car using the Artemis directly,
                 using the newly added dual motor drivers. The objective of the lab was
                 to program the car to execute a set of pre-programmed moves including
-                turns.
+                turns. Furthermore,
             </p>
 
         <h1>Prelab</h1>
