--- a/labs/lab6.html
+++ b/labs/lab6.html
@@ -59,6 +59,25 @@
         </div>
 
         <h1>Introduction</h1>
+            <p>
+                The purpose of this lab is to implement PID control on the robot. PID control is
+                very important, as the robot can deviate in its motion over time due to various
+                factors, and using PID allows the robot get back in intended motion. PID involves
+                using coefficients that affect the movement differently. P refers to proportional,
+                I refers to integral, and D refers to derivative, any combination of which can be
+                used to establish P, PI, PD, or PID control.
+            </p>
+        
+        <h1>Prelab</h1>
+            <p>
+                Debugging is very important in creating a solution. For the robot, I 
+            </p>
+        
+        <h1>Position Control</h1>
+            <p>
+                This task requires driving the robot as fast as possible toward a wall, and
+                stopping it exactly 1 foot away from the wall using the ToF sensor data.
+            </p>
 
         <footer class="site-footer">
             <span class="site-footer-owner">
