added images and video

--- a/labs/lab5.html
+++ b/labs/lab5.html
@@ -166,7 +166,7 @@
                 
                 <figure id="figure5">
                     <video width="100%" controls loop>
-                        <source src="/ece4160-website/assets/videos/lab5/leftMotor.mp4"
+                        <source src="/ece4160-website/assets/videos/lab5/leftMotor.mov"
                         type="video/mp4">
                     </video>
                 </figure>
